generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["relationJoins"]
}

generator dbml {
  provider            = "prisma-dbml-generator"
  projectDatabaseType = "PostgreSQL"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int     @id @default(autoincrement())
  email     String? @unique
  phoneNo   String? @unique
  aadharNo  String? @unique
  panNo     String? @unique
  icNo      String  @unique
  rank      String?
  firstName String  @db.VarChar(255)
  lastName  String? @db.VarChar(255)
  role      Role    @default(STUDENT)
  password  String

  // Relation fields
  courseId    Int?
  testResults Result[]  @relation(name: "results")
  testsGraded Result[]  @relation(name: "graded")
  course      Course?   @relation(fields: [courseId], references: [id])
  Subject     Subject[]
}

model Course {
  id         Int    @id @default(autoincrement())
  courseCode String @unique
  name       String
  semesters  Int
  credits    Int
  // total = 40 * credits
  total      Int

  // Relation fields
  subjects Subject[]
  students User[]

  @@index([courseCode])
}

model Subject {
  id          Int    @id @default(autoincrement())
  subjectCode String @unique
  name        String @default("")
  semester    Int
  credits     Int

  // Relation Fields
  teacherId Int?
  courses   Course[]
  results   Result[]
  teacher   User?    @relation(fields: [teacherId], references: [id])

  @@index([subjectCode])
}

model Result {
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  PH1          Int?
  PH2          Int?
  assignment   Int?
  IA           Int?
  finals       Int?
  overall      Int?
  letterGrade  LetterGrade?
  digitalGrade Int?
  CixGi        Int?

  // Relation fields
  subjectId Int
  studentId Int
  graderId  Int?
  subject   Subject @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  student   User    @relation(name: "results", fields: [studentId], references: [id], onDelete: Cascade)
  gradedBy  User?   @relation(name: "graded", fields: [graderId], references: [id], onDelete: SetNull)

  @@id(name: "resultId", [studentId, subjectId])
}

enum Role {
  STUDENT
  TEACHER
  ADMIN
}

enum LetterGrade {
  AP
  AO
  AM
  BP
  BO
  BM
  CP
  CO
  CM
  F
}
