//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique]
  phoneNo String [unique]
  aadharNo String [unique]
  panNo String [unique]
  icNo String [unique, not null]
  rank String
  firstName String [not null]
  lastName String
  role Role [not null, default: 'STUDENT']
  password String [not null]
  courseId Int
  testResults Result [not null]
  testsGraded Result [not null]
  course Course
  Subject Subject [not null]
}

Table Course {
  id Int [pk, increment]
  courseCode String [unique, not null]
  name String [not null]
  semesters Int [not null]
  credits Int [not null]
  total Int [not null]
  subjects Subject [not null]
  students User [not null]
}

Table Subject {
  id Int [pk, increment]
  subjectCode String [unique, not null]
  name String [not null, default: '']
  semester Int [not null]
  credits Int [not null]
  teacherId Int
  courses Course [not null]
  results Result [not null]
  teacher User
}

Table Result {
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  PH1 Int
  PH2 Int
  assignment Int
  IA Int
  finals Int
  overall Int
  letterGrade LetterGrade
  digitalGrade Int
  CixGi Int
  subjectId Int [not null]
  studentId Int [not null]
  graderId Int
  subject Subject [not null]
  student User [not null]
  gradedBy User

  indexes {
    (studentId, subjectId) [pk]
  }
}

Table CourseToSubject {
  subjectsId Int [ref: > Subject.id]
  coursesId Int [ref: > Course.id]
}

Enum Role {
  STUDENT
  TEACHER
  ADMIN
}

Enum LetterGrade {
  AP
  AO
  AM
  BP
  BO
  BM
  CP
  CO
  CM
  F
}

Ref: User.courseId > Course.id

Ref: Subject.teacherId > User.id

Ref: Result.subjectId > Subject.id [delete: Cascade]

Ref: Result.studentId > User.id [delete: Cascade]

Ref: Result.graderId > User.id [delete: Cascade]